--- a/Netbeans Modeler API/nbproject/private/platform-private.properties
+++ b/Netbeans Modeler API/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\gaurav\\AppData\\Roaming\\NetBeans\\8.0rc1\\build.properties
+user.properties.file=C:\\wamp2\\SecureCalculator\\Modeler Project\\JPA Modeler Suite\\build\\testuserdir\\build.properties
