git-svn-id: https://svn.java.net/svn/nbmodeler~src/trunk@45 9f0aca7e-1a6e-6720-9278-92ef8abbc096

--- a/Netbeans Modeler API/nbproject/private/platform-private.properties
+++ b/Netbeans Modeler API/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\wamp2\\SecureCalculator\\Modeler Project\\JPA Modeler Suite\\build\\testuserdir\\build.properties
+user.properties.file=C:\\Users\\SERVO006\\AppData\\Roaming\\NetBeans\\8.0rc1\\build.properties
