--- a/Netbeans Modeler API/nbproject/private/platform-private.properties
+++ b/Netbeans Modeler API/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\SERVO006\\AppData\\Roaming\\NetBeans\\8.0rc1\\build.properties
+user.properties.file=C:\\Users\\SERVO006\\AppData\\Roaming\\NetBeans\\dev\\build.properties
