--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -10,5 +10,6 @@ cluster.path=\
     ${nbplatform.active.dir}/ide:\
     ${nbplatform.active.dir}/platform:\
     ${nbplatform.active.dir}/extide:\
-    ${nbplatform.active.dir}/nb
+    ${nbplatform.active.dir}/nb:\
+    ${nbplatform.active.dir}/cluster
 nbplatform.active=default
