Code Generator common API

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Modeler Properties/build/
 /Libraries/build/
 /Modeler Libraries/build/
+/CodeGenerator/nbproject/private/
+/Code Generator/nbproject/private/
