Code Generator moved to new project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,11 +11,9 @@ modules=\
     ${project.org.netbeans.modeler.palette}:\
     ${project.org.netbeans.modeler.properties}:\
     ${project.org.netbeans.modeler}:\
-    ${project.org.netbeans.modeler.libs}:\
-    ${project.org.netbeans.zencode}
+    ${project.org.netbeans.modeler.libs}
 project.org.netbeans.modeler=Modeler Core
 project.org.netbeans.modeler.libs=Modeler Libraries
 project.org.netbeans.modeler.palette=Modeler Palette
 project.org.netbeans.modeler.properties=Modeler Properties
 project.org.netbeans.modeler.specification=Modeler Specification
-project.org.netbeans.zencode=Code Generator
