PropertyChangeListener in Combobox

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Modeler Libraries/nbproject/private/
 /nbproject/private/
 /Modeler Properties/nbproject/private/
+/Modeler Palette/nbproject/private/
