Default Export Manager support provided and Dark text color updated

--- a/Modeler Libraries/nbproject/project.properties
+++ b/Modeler Libraries/nbproject/project.properties
@@ -7,3 +7,4 @@ file.reference.gson-2.2.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler L
 file.reference.mvel2-2.2.0.Final.jar=release/modules/ext/mvel2-2.2.0.Final.jar
 file.reference.w3c.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/w3c.jar
 is.autoload=true
+nbm.module.author=Gaurav Gupta
