--- a/Modeler Specification/nbproject/project.properties
+++ b/Modeler Specification/nbproject/project.properties
@@ -8,3 +8,4 @@ file.reference.w3c.jar=release/modules/ext/w3c.jar
 is.autoload=true
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
+nbm.module.author=Gaurav Gupta
