--- a/Modeler Core/nbproject/project.properties
+++ b/Modeler Core/nbproject/project.properties
@@ -1,4 +1,4 @@
 is.autoload=true
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
-nbm.module.author=Gaurav Gupta
+nbm.module.author=jGauravGupta
