--- a/Modeler Palette/nbproject/project.properties
+++ b/Modeler Palette/nbproject/project.properties
@@ -1,4 +1,5 @@
 is.autoload=true
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../LICENSE
 nbm.module.author=jGauravGupta
