--- a/Modeler Specification/nbproject/project.properties
+++ b/Modeler Specification/nbproject/project.properties
@@ -8,4 +8,5 @@ file.reference.w3c.jar=release/modules/ext/w3c.jar
 is.autoload=true
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../LICENSE
 nbm.module.author=jGauravGupta
