--- a/Modeler Core/src/org/netbeans/modeler/component/save/ui/Bundle.properties
+++ b/Modeler Core/src/org/netbeans/modeler/component/save/ui/Bundle.properties
@@ -1,7 +1,7 @@
 
 LBL_OKButton=OK
 LBL_SaveNotifierDialog_Question={0}, {1}, must first be saved.\n Do you wish to continue?
-LBL_SaveNotifierYesNoDialog_Question={0} {1}, is modified. Save it?
+LBL_SaveNotifierYesNoDialog_Question={0} is modified, Do you want to save changes ?
 LBL_YesButton=Yes
 LBL_NoButton=&No
 LBL_DiscardButton=&Discard
