--- a/Modeler Libraries/nbproject/project.properties
+++ b/Modeler Libraries/nbproject/project.properties
@@ -1,3 +1,4 @@
+file.reference.analytics-java-1.1.3.jar=release/modules/ext/analytics-java-1.1.3.jar
 file.reference.batik-all-1_7.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/batik-all-1_7.jar
 file.reference.batik-all-1_7.jar-1=release/modules/ext/batik-all-1_7.jar
 file.reference.batik-ext-1.6-1.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/batik-ext-1.6-1.jar
