Issue Fix : #60 Slowness issue

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /nbproject/private/
 /Modeler Properties/nbproject/private/
 /Modeler Palette/nbproject/private/
+/Visual API Patch/build/
+/Visual API Patch/nbproject/private/
