--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Modeler Palette/nbproject/private/
 /Visual API Patch/build/
 /Visual API Patch/nbproject/private/
+/Modeler Specification/build/
