--- a/Modeler Libraries/nbproject/project.properties
+++ b/Modeler Libraries/nbproject/project.properties
@@ -15,6 +15,9 @@ file.reference.gson-2.2.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler L
 file.reference.gson-2.2.3.jar-1=release/modules/ext/gson-2.2.3.jar
 file.reference.httpclient-4.3.jar=release/modules/ext/httpclient-4.3.jar
 file.reference.httpcore-4.3.jar=release/modules/ext/httpcore-4.3.jar
+file.reference.jackson-annotations-2.7.5.jar=release/modules/ext/jackson-annotations-2.7.5.jar
+file.reference.jackson-core-2.7.5.jar=release/modules/ext/jackson-core-2.7.5.jar
+file.reference.jackson-databind-2.7.5.jar=release/modules/ext/jackson-databind-2.7.5.jar
 file.reference.mvel2-2.2.0.Final.jar=release/modules/ext/mvel2-2.2.0.Final.jar
 file.reference.w3c.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/w3c.jar
 file.reference.w3c.jar-1=release/modules/ext/w3c.jar
