--- a/Modeler Libraries/nbproject/project.properties
+++ b/Modeler Libraries/nbproject/project.properties
@@ -1,26 +1,26 @@
 file.reference.analytics-java-1.1.3.jar=release/modules/ext/analytics-java-1.1.3.jar
-file.reference.batik-all-1_7.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/batik-all-1_7.jar
-file.reference.batik-all-1_7.jar-1=release/modules/ext/batik-all-1_7.jar
-file.reference.batik-ext-1.6-1.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/batik-ext-1.6-1.jar
-file.reference.batik-ext-1.6-1.jar-1=release/modules/ext/batik-ext-1.6-1.jar
-file.reference.commons-beanutils-1.8.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/commons-beanutils-1.8.3.jar
-file.reference.commons-beanutils-1.8.3.jar-1=release/modules/ext/commons-beanutils-1.8.3.jar
-file.reference.commons-beanutils-bean-collections-1.8.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/commons-beanutils-bean-collections-1.8.3.jar
-file.reference.commons-beanutils-bean-collections-1.8.3.jar-1=release/modules/ext/commons-beanutils-bean-collections-1.8.3.jar
-file.reference.commons-beanutils-core-1.8.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/commons-beanutils-core-1.8.3.jar
-file.reference.commons-beanutils-core-1.8.3.jar-1=release/modules/ext/commons-beanutils-core-1.8.3.jar
+file.reference.batik-all-1_7.jar=release/modules/ext/batik-all-1_7.jar
+file.reference.batik-ext-1.6-1.jar=release/modules/ext/batik-ext-1.6-1.jar
+file.reference.commons-beanutils-1.8.3.jar=release/modules/ext/commons-beanutils-1.8.3.jar
+file.reference.commons-beanutils-bean-collections-1.8.3.jar=release/modules/ext/commons-beanutils-bean-collections-1.8.3.jar
+file.reference.commons-beanutils-core-1.8.3.jar=release/modules/ext/commons-beanutils-core-1.8.3.jar
 file.reference.commons-codec-1.6.jar=release/modules/ext/commons-codec-1.6.jar
+file.reference.commons-collections-3.2.1.jar=release/modules/ext/commons-collections-3.2.1.jar
+file.reference.commons-io-2.6.jar=F:\\JPAM\\Module\\JeddictWP\\NBModeler\\Modeler Libraries\\release\\modules\\ext\\commons-io-2.6.jar
+file.reference.commons-lang3-3.7.jar=release/modules/ext/commons-lang3-3.7.jar
 file.reference.commons-logging-1.1.3.jar=release/modules/ext/commons-logging-1.1.3.jar
-file.reference.gson-2.2.3.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/gson-2.2.3.jar
-file.reference.gson-2.2.3.jar-1=release/modules/ext/gson-2.2.3.jar
+file.reference.gson-2.2.3.jar=release/modules/ext/gson-2.2.3.jar
 file.reference.httpclient-4.3.jar=release/modules/ext/httpclient-4.3.jar
 file.reference.httpcore-4.3.jar=release/modules/ext/httpcore-4.3.jar
 file.reference.jackson-annotations-2.7.5.jar=release/modules/ext/jackson-annotations-2.7.5.jar
 file.reference.jackson-core-2.7.5.jar=release/modules/ext/jackson-core-2.7.5.jar
 file.reference.jackson-databind-2.7.5.jar=release/modules/ext/jackson-databind-2.7.5.jar
-file.reference.mvel2-2.2.0.Final.jar=release/modules/ext/mvel2-2.2.0.Final.jar
-file.reference.w3c.jar=/home/jGauravGupta/nb/NB5/JPAM/nbmodeler/Modeler Libraries/release/modules/ext/w3c.jar
-file.reference.w3c.jar-1=release/modules/ext/w3c.jar
+file.reference.logback.jar=release/modules/ext/logback.jar
+file.reference.mvel2-2.4.0.Final.jar=release/modules/ext/mvel2-2.4.0.Final.jar
+file.reference.slf4j.jar=release/modules/ext/slf4j.jar
+file.reference.velocity-engine-core-2.0.jar=/velocity-engine-core-2.0.jar
+file.reference.velocity-engine-core-2.0.jar-1=release/modules/ext/velocity-engine-core-2.0.jar
+file.reference.w3c.jar=release/modules/ext/w3c.jar
 license.file=../LICENSE
 nbm.module.author=jGauravGupta
 nbm.needs.restart=true
