--- a/libs/nbproject/project.properties
+++ b/libs/nbproject/project.properties
@@ -6,7 +6,7 @@ file.reference.commons-beanutils-bean-collections-1.8.3.jar=release/modules/ext/
 file.reference.commons-beanutils-core-1.8.3.jar=release/modules/ext/commons-beanutils-core-1.8.3.jar
 file.reference.commons-codec-1.6.jar=release/modules/ext/commons-codec-1.6.jar
 file.reference.commons-collections-3.2.1.jar=release/modules/ext/commons-collections-3.2.1.jar
-file.reference.commons-io-2.6.jar=F:\\JPAM\\Module\\JeddictWP\\NBModeler\\Modeler Libraries\\release\\modules\\ext\\commons-io-2.6.jar
+file.reference.commons-io-2.6.jar=release/modules/ext/commons-io-2.6.jar
 file.reference.commons-lang3-3.7.jar=release/modules/ext/commons-lang3-3.7.jar
 file.reference.commons-logging-1.1.3.jar=release/modules/ext/commons-logging-1.1.3.jar
 file.reference.gson-2.2.3.jar=release/modules/ext/gson-2.2.3.jar
@@ -15,6 +15,8 @@ file.reference.httpcore-4.3.jar=release/modules/ext/httpcore-4.3.jar
 file.reference.jackson-annotations-2.7.5.jar=release/modules/ext/jackson-annotations-2.7.5.jar
 file.reference.jackson-core-2.7.5.jar=release/modules/ext/jackson-core-2.7.5.jar
 file.reference.jackson-databind-2.7.5.jar=release/modules/ext/jackson-databind-2.7.5.jar
+file.reference.javax.json-api-1.1.2.jar=release/modules/ext/javax.json-api-1.1.2.jar
+file.reference.javax.json.impl-1.1.2.jar=release/modules/ext/javax.json.impl-1.1.2.jar
 file.reference.logback.jar=release/modules/ext/logback.jar
 file.reference.mvel2-2.4.0.Final.jar=release/modules/ext/mvel2-2.4.0.Final.jar
 file.reference.slf4j.jar=release/modules/ext/slf4j.jar
@@ -25,3 +27,4 @@ license.file=../LICENSE
 nbm.module.author=jGauravGupta
 nbm.needs.restart=true
 nbm.homepage=http://jeddict.github.io/
+w
