--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,3 @@
-app.name=${branding.token}
 app.title=NetBeans Modeler
 auxiliary.org-netbeans-modules-apisupport-installer.license-type=apache.v2
 auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
@@ -8,10 +7,10 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 modules=\
+    ${project.org.netbeans.modeler.libs}:\
     ${project.org.netbeans.modeler.specification}:\
     ${project.org.netbeans.modeler.properties}:\
-    ${project.org.netbeans.modeler}:\
-    ${project.org.netbeans.modeler.libs}
+    ${project.org.netbeans.modeler}
 project.org.netbeans.modeler=modeler.impl
 project.org.netbeans.modeler.libs=libs
 project.org.netbeans.modeler.properties=modeler.properties
