Apache Commons dependency update

--- a/modeler-lib/pom.xml
+++ b/modeler-lib/pom.xml
@@ -22,7 +22,12 @@
                 <extensions>true</extensions>
                 <configuration>
                     <publicPackages>
-                        <publicPackage>org.apache.*</publicPackage>
+                        <publicPackage>org.apache.commons.lang</publicPackage>
+                        <publicPackage>org.apache.commons.io</publicPackage>
+                        <publicPackage>org.apache.commons.beanutils</publicPackage>
+                        <publicPackage>org.apache.batik.*</publicPackage>
+                        <publicPackage>org.apache.velocity</publicPackage>
+                        <publicPackage>org.apache.velocity.*</publicPackage>
                         <publicPackage>org.codehaus.plexus.*</publicPackage>
                         <publicPackage>javax.*</publicPackage>
                         <publicPackage>org.w3c.*</publicPackage>
@@ -53,12 +58,33 @@
             </plugins>
         </pluginManagement>
     </build>
-    
+
     <dependencies>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-transcoder</artifactId>
             <version>1.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-io</groupId>
+                    <artifactId>commons-io</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
@@ -76,29 +102,15 @@
             <version>1.9.3</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.11</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity</artifactId>
             <version>1.7</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-lang</groupId>
+                    <artifactId>commons-lang</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mvel</groupId>
