--- a/modeler-properties/src/main/java/org/netbeans/modeler/properties/customattr/Bundle.properties
+++ b/modeler-properties/src/main/java/org/netbeans/modeler/properties/customattr/Bundle.properties
@@ -37,3 +37,4 @@ CustomAttributeEditor.jButtonModifyProperty.toolTipText=Update Row
 CustomAttributeEditor.jButtonModifyProperty.text_1=Edit
 CustomAttributeEditor.jButtonNewProperty.actionCommand=
 CustomAttributeEditor.jButtonNewProperty.toolTipText=Add new
+CustomAttributeEditor.jButtonNewProperty.actionCommand=
