--- a/modeler-impl/pom.xml
+++ b/modeler-impl/pom.xml
@@ -43,6 +43,10 @@
                             <id>org.netbeans.modules:org-netbeans-core-windows</id>
                             <type>impl</type>
                         </dependency>
+                        <dependency>
+                            <id>org.netbeans.modules:org-netbeans-modules-maven-embedder</id>
+                            <type>impl</type>
+                        </dependency>
                     </moduleDependencies>
                 </configuration>
             </plugin>
