--- a/modeler-lib/pom.xml
+++ b/modeler-lib/pom.xml
@@ -37,6 +37,7 @@
                         <publicPackage>org.atteo.evo.inflector</publicPackage>
                         <publicPackage>org.eclipse.yasson.*</publicPackage>
                         <publicPackage>org.glassfish.json.*</publicPackage>
+                        <publicPackage>com.brsanthu.googleanalytics.*</publicPackage>
                     </publicPackages>
                 </configuration>
             </plugin>
@@ -107,9 +108,9 @@
             <version>2.4.0.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.analytics</groupId>
-            <artifactId>analytics</artifactId>
-            <version>1.0</version>
+            <groupId>com.brsanthu</groupId>
+            <artifactId>google-analytics-java</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>javax.json.bind</groupId>
@@ -138,13 +139,6 @@
             <version>1.2.2</version>
         </dependency>
     </dependencies>
-    
-    <repositories>
-        <repository>
-            <id>local-repository</id>
-            <url>file:${project.basedir}/repository</url>
-        </repository>
-    </repositories>
 
     <profiles>
         <profile>
