--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /modeler-impl/target/
 /modeler-lib/target/
 /modeler-properties/target/
+/SVGModelerImplementation/nbproject/private/
+/SVGModelerImplementation222/nbproject/private/
+/modeler-properties - Copy/target/
+/modeler-svg-impl/target/
