--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
         <module>modeler-lib</module>
     </modules>
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <netbeans.version>RELEASE82</netbeans.version>
         <root.dir>${basedir}</root.dir>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <netbeans.version>RELEASE110</netbeans.version>
+        <netbeans.installation>${root.dir}/../incubator-netbeans/nbbuild/netbeans</netbeans.installation>
         <nbm.cluster>jeddict</nbm.cluster>
         <nbm.build.dir>${root.dir}/../jeddict-cluster</nbm.build.dir>
         <nbm.maven.plugin.version>4.1</nbm.maven.plugin.version>
@@ -69,7 +70,7 @@
             </resource>
         </resources>
     </build>
-
+    
     <repositories>
         <repository>
             <id>netbeans-modules</id>
