--- a/pom.xml
+++ b/pom.xml
@@ -79,4 +79,13 @@
             </modules>
         </profile>
     </profiles>
+
+    <repositories>
+        <repository>
+            <id>netbeans111</id>
+            <url>
+                https://repository.apache.org/content/repositories/orgapachenetbeans-1035
+            </url>
+        </repository>
+    </repositories>
 </project>
