--- a/modeler-lib/pom.xml
+++ b/modeler-lib/pom.xml
@@ -99,6 +99,17 @@
             <artifactId>evo-inflector</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>2.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
