--- a/modeler-svg-impl/pom.xml
+++ b/modeler-svg-impl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.jeddict.modeler</groupId>
         <artifactId>netbeans-modeler</artifactId>
-        <version>5.4.4</version>
+        <version>6.0</version>
     </parent>
     <artifactId>modeler-svg-impl</artifactId>
     <name>Modeler SVG Implementation</name>
@@ -18,7 +18,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+                <groupId>org.apache.netbeans.utilities</groupId>
                 <artifactId>nbm-maven-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
